fixed text wrapping for long channel names

--- a/webUI.css
+++ b/webUI.css
@@ -1,9 +1,3 @@
-/*
-		BE CAREFUL IF YOU CHANGE THIS.
-		DO NOT CHANGE **ANY** SIZES FLOATS ETC WITHOUT CONSULTING WITH NATHALIE
-
-		you can change colors if you want lol
-*/
 #chat-log-wrapper
 {
 	overflow-y:auto;
@@ -44,13 +38,17 @@
 {
   background : none;
   color:white;
+	word-wrap: break-word;
   border: none;
+	width:100%;
 }
 .online-button
 {
   background : none;
   color:white;
   border: none;
+	word-wrap: break-word;
+	width:100%;
 }
 .left-column
 {
@@ -67,6 +65,7 @@
   width:94%;
   height:88%;
   overflow:auto;
+	overflow-x:hidden;
   padding:5px; 
 }
 .top-bar
@@ -76,6 +75,9 @@
   color:white;
   float:right;
   height: 3%;
+	word-wrap: break-word;
+	overflow-x:hidden;
+	overflow-y:auto;
 }
 code
 {
@@ -120,6 +122,10 @@ code
 #online-channel-header
 {
 	background:#333333;
+	overflow-x:hidden;
+	overflow-y:auto;
+	word-wrap: break-word;
+	height:4%;
 }
 .body
 {
